--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 DATABASE_URL="postgresql://postgres:Shubh@localhost:5432/refer_earn"
-GMAIL_USER="undefinedme0@gmail.com"
-GMAIL_PASS="Undefinedme@#1234"
+GMAIL_USER="your_EmailId"
+GMAIL_PASS="your_password"
